--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -10,6 +10,15 @@
     position: absolute;
   }
 
+  .cont_animaciones_login{
+    background: rgb(255, 255, 255);
+    width: 100vw;
+    height: 100vh;
+    position:absolute;
+    top: 0;
+    z-index: 1001;
+  }
+
   .boton_portafolio {
     position: absolute;
     bottom: -4px;
@@ -68,28 +77,31 @@
       width: 100%;
       align-items: start;
       flex-direction: column;
-      height: 100vh;
-      gap: 0.5em;
+
 
       h1 {
+        width: 100%;
+        margin-top: 0.1em;
+        margin-bottom: 0.1em;
         color: #000;
         text-align: start;
-        font-family: MargoBeuys;
-        font-size: calc(1px + 10vw);
-        font-style: normal;
-        font-weight: 400;
-        line-height: 110%;
-        text-transform: uppercase;
+        display: flex;
+        flex-direction: column;
 
-        strong {
+        .titulo {
+          overflow: hidden;
           color: #000000;
           font-family: MargoBeuys;
           font-size: calc(1px + 10vw);
           font-style: normal;
           font-weight: 400;
-          line-height: 110%;
+          line-height: 100%;
           text-transform: uppercase;
+          p{
+            transform: translateY(130%);
+          }
         }
+
       }
 
       .cont_barra_contadores {
@@ -100,11 +112,15 @@
         align-items: start;
         gap: 2em;
         width: 100%;
-        img{
+        overflow: hidden;
+
+        .item_img{
+          transform: translateY(130%);
           width: 8%;
         }
 
         .cont_parrafo_contadores {
+          transform: translateY(130%);
           display: flex;
           flex-direction: column;
           align-items: start;
@@ -180,6 +196,7 @@
         }
 
         .contador_cont {
+          transform: translateY(130%);
           display: flex;
           align-items: center;
           gap: 10px;
@@ -226,6 +243,7 @@
     width: 88vw;
     margin-top: 5em;
     margin-left: 5em;
+    opacity: 0;
   }
 
   .fondo_inicio {
