--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -17,6 +17,7 @@ $left-offset: 0px;
 $clip-height: 50px;
 $line-height: $clip-height - 5px;
 
+
 * {
   margin: 0px;
   padding: 0px;
@@ -29,6 +30,7 @@ $line-height: $clip-height - 5px;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   scroll-behavior: smooth;
+
   //border: 1px solid red;
 }
 
@@ -56,24 +58,39 @@ body::-webkit-scrollbar-thumb {
 //########### boton de contactar ###########//
 .float__wapp {
   display: flex;
-  position: fixed;
+  position:absolute;
   width: 50px;
   height: 50px;
-  top: 25vh;
-  left: 75vw;
-  z-index: 1;
-  transform: scale(1.7);
-  rotate: 20deg;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+  transform: scale(1);
+  rotate: 0deg;
+
 
   a {
-    width: 400%;
-    height: 100px;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
     .botonfloat__wapp {
-      margin-top: 23px;
-      margin-left: 23px;
       position: absolute;
       z-index: 1;
+      border-radius: 100%;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .rectangulo{
+        position: absolute;
+        z-index: -1;
+        top: 100%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background: #fbff00;
+      }
     }
 
     .botonfloat__wapp:hover {
@@ -81,6 +98,7 @@ body::-webkit-scrollbar-thumb {
     }
 
     .backfloat__wapp {
+      opacity: 0;
       position: absolute;
       z-index: 0;
       animation-name: backfloat;
@@ -159,32 +177,37 @@ p {
 
 /* ################# NUEVO MENU ############## */
 .conte__menu {
-  margin: 2em calc(1px + 5vw) 2em calc(1px + 5vw);
+  margin: 2em 5em 2em 5em;
+
 
   .header__index {
     display: flex;
     justify-content: space-between;
     justify-items: center;
     align-items: center;
+    overflow: hidden;
 
     .cont__logo__nav {
-      transform: scale(0.9);
+      transform: scale(0.9) translateY(-50px);
       z-index: 1000;
       filter: invert(100%);
     }
 
     .icono-menu {
-      transform: scale(0.8);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transform: scale(0.8) translateY(-50px);
       z-index: 1000;
-      margin-right: 5px;
+      margin-right: 9px;
 
       .bars__menu {
         width: 10px;
         height: 10px;
         position: relative;
-        top: 50%;
+        top: 0%;
         left: 0%;
-        transform: translate(-100%, -50%) scale(4);
+        transform: translate(-50%, -50%) scale(4);
 
         span {
           display: block;
@@ -766,16 +789,17 @@ p {
       justify-content: space-between;
       justify-items: center;
       align-items: center;
+      overflow: hidden;
 
       .cont__logo__nav {
-        transform: scale(0.8);
+        transform: scale(0.8) translateY(-70px);
         z-index: 1000;
         filter: invert(100%);
         align-items: center;
       }
 
       .icono-menu {
-        transform: scale(0.8);
+        transform: scale(0.8) translateY(-70px);
         z-index: 1000;
         margin-right: -5px;
         width: 50px;
@@ -1550,327 +1574,6 @@ p {
         font-weight: 400;
         line-height: normal;
         white-space: nowrap;
-      }
-    }
-  }
-}
-
-@media (max-width: 800px) {
-  .slider_uno {
-    position: fixed;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    height: 250px;
-    margin: auto;
-    overflow: hidden;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    height: 100vh;
-    transform: rotate(0deg);
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-shrink: 0;
-
-    .slide-track {
-      -webkit-animation: scroll 30s linear infinite;
-      animation: scroll 30s linear infinite;
-      display: flex;
-      width: 3200px;
-      gap: 0px;
-      border: 1px solid #000;
-      background: #fff;
-      box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
-
-      .slide {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-
-        p {
-          color: #000;
-          font-family: Poppins;
-          font-size: 25px;
-          font-style: normal;
-          text-align: start;
-          font-weight: 400;
-          line-height: normal;
-          white-space: nowrap;
-        }
-      }
-    }
-
-    .slide-track-contra {
-      -webkit-animation: scrollcontra 30s linear infinite;
-      animation: scrollcontra 30s linear infinite;
-      display: flex;
-      width: 3200px;
-      gap: 10px;
-      border: 1px solid #000;
-      background: #fff;
-      box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
-
-      .slide {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        transform: rotate(180deg);
-
-        p {
-          color: #000;
-          font-family: Poppins;
-          font-size: 25px;
-          font-style: normal;
-          text-align: start;
-          font-weight: 400;
-          line-height: normal;
-          white-space: nowrap;
-        }
-      }
-    }
-  }
-
-  .slider_dos {
-    position: fixed;
-    z-index: 1;
-    bottom: 0;
-    top: 0;
-    right: 0px;
-    margin: auto;
-    overflow: hidden;
-    width: 100vh;
-    display: flex;
-    align-items: center;
-    height: 100vh;
-    transform: rotate(-90deg);
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-shrink: 0;
-
-    .slide-track {
-      -webkit-animation: scroll 30s linear infinite;
-      animation: scroll 30s linear infinite;
-      display: flex;
-      width: 3200px;
-      gap: 10px;
-      border: 1px solid #000;
-      background: #fff;
-      box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
-
-      .slide {
-        height: 100%;
-        width: 100vh;
-        display: flex;
-        align-items: center;
-
-        p {
-          color: #000;
-          font-family: Poppins;
-          font-size: 25px;
-          font-style: normal;
-          text-align: start;
-          font-weight: 400;
-          line-height: normal;
-          white-space: nowrap;
-        }
-      }
-    }
-
-    .slide-track-contra {
-      -webkit-animation: scrollcontra 30s linear infinite;
-      animation: scrollcontra 30s linear infinite;
-      display: flex;
-      width: 3200px;
-      gap: 10px;
-      align-items: end;
-      border: 1px solid #000;
-      background: #d11212;
-      box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
-
-      .slide {
-        height: 100%;
-        width: 100vh;
-        display: flex;
-        align-items: center;
-        transform: rotate(180deg);
-
-        p {
-          color: #000;
-          font-family: Poppins;
-          font-size: 25px;
-          font-style: normal;
-          text-align: start;
-          font-weight: 400;
-          line-height: normal;
-          white-space: nowrap;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 700px) {
-  .slider_uno {
-    visibility: hidden;
-
-    position: fixed;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    height: 250px;
-    margin: auto;
-    overflow: hidden;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    height: 100vh;
-    transform: rotate(0deg);
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-shrink: 0;
-
-    .slide-track {
-      -webkit-animation: scroll 30s linear infinite;
-      animation: scroll 30s linear infinite;
-      display: flex;
-      width: 3200px;
-      gap: 0px;
-      border: 1px solid #000;
-      background: #fff;
-      box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
-
-      .slide {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-
-        p {
-          color: #000;
-          font-family: Poppins;
-          font-size: 25px;
-          font-style: normal;
-          text-align: start;
-          font-weight: 400;
-          line-height: normal;
-          white-space: nowrap;
-        }
-      }
-    }
-
-    .slide-track-contra {
-      -webkit-animation: scrollcontra 30s linear infinite;
-      animation: scrollcontra 30s linear infinite;
-      display: flex;
-      width: 3200px;
-      gap: 10px;
-      border: 1px solid #000;
-      background: #fff;
-      box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
-
-      .slide {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        transform: rotate(180deg);
-
-        p {
-          color: #000;
-          font-family: Poppins;
-          font-size: 25px;
-          font-style: normal;
-          text-align: start;
-          font-weight: 400;
-          line-height: normal;
-          white-space: nowrap;
-        }
-      }
-    }
-  }
-
-  .slider_dos {
-    visibility: hidden;
-    position: fixed;
-    z-index: 1;
-    bottom: 0;
-    top: 0;
-    right: 0px;
-    margin: auto;
-    overflow: hidden;
-    width: 90vh;
-    display: flex;
-    align-items: center;
-    height: 100vh;
-    transform: rotate(-90deg);
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-shrink: 0;
-
-    .slide-track {
-      -webkit-animation: scroll 30s linear infinite;
-      animation: scroll 30s linear infinite;
-      display: flex;
-      width: 3200px;
-      gap: 10px;
-      border: 1px solid #000;
-      background: #fff;
-      box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
-
-      .slide {
-        height: 100%;
-        width: 100vh;
-        display: flex;
-        align-items: center;
-
-        p {
-          color: #000;
-          font-family: Poppins;
-          font-size: 35px;
-          font-style: normal;
-          text-align: start;
-          font-weight: 400;
-          line-height: normal;
-          white-space: nowrap;
-        }
-      }
-    }
-
-    .slide-track-contra {
-      -webkit-animation: scrollcontra 30s linear infinite;
-      animation: scrollcontra 30s linear infinite;
-      display: flex;
-      width: 3200px;
-      gap: 10px;
-      align-items: end;
-      border: 1px solid #000;
-      background: #d11212;
-      box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
-
-      .slide {
-        height: 100%;
-        width: 100vh;
-        display: flex;
-        align-items: center;
-        transform: rotate(180deg);
-
-        p {
-          color: #000;
-          font-family: Poppins;
-          font-size: 35px;
-          font-style: normal;
-          text-align: start;
-          font-weight: 400;
-          line-height: normal;
-          white-space: nowrap;
-        }
       }
     }
   }
