--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -2067,29 +2067,19 @@
         justify-content: none;
         gap: 1em;
         flex-direction: column;
-        height: 75vh;
+        height: 80vh;
 
-        h1 {
-          margin-top: 0em;
-          color: #1d1d1d;
-          text-align: center;
+        .titulo {
+          overflow: hidden;
+          color: #000000;
           font-family: MargoBeuys;
-          font-size: calc(1px + 12vw);
+          font-size: calc(1px + 15vw);
           font-style: normal;
-          font-weight: 600;
-          line-height: 110%;
+          font-weight: 400;
+          line-height: 100%;
           text-transform: uppercase;
-          text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
-
-          strong {
-            color: #1d1d1d;
-            font-family: "Bodoni Moda", serif;
-            font-size: calc(1px + 12vw);
-            font-style: italic;
-            font-weight: 700;
-            line-height: 136%;
-            text-transform: uppercase;
-            text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
+          p{
+            transform: translateY(130%);
           }
         }
 
@@ -2111,28 +2101,34 @@
           backdrop-filter: blur(50px);
 
           .item:nth-child(1){
+
             order: 1;
           }
 
           .item:nth-child(2){
+
             order: 4;
           }
 
           .item:nth-child(3){
+
             order: 2;
           }
 
           .item:nth-child(4){
+
             order: 3;
           }
 
-          img{
+          .item_img{
+            transform: translateY(200%);
             grid-area: 1 / 1 / 3 / 2; 
             width: 100%;
 
           }
 
           .cont_parrafo_contadores{
+            transform: translateY(130%);
             grid-area: 3 / 1 / 4 / 3; 
             display: flex;
             align-items: center;
@@ -2193,6 +2189,7 @@
           }
 
           .contador_cont {
+            transform: translateY(450%);
             justify-content: center;
             display: flex;
             align-items: center;
@@ -3741,6 +3738,9 @@
             top: 0vh;
             position: absolute;
             z-index: -3;
+            .svguno{
+              width: 95%;
+            }
           }
           .cont_animacion_dos {
             opacity: 0%;
@@ -3748,7 +3748,7 @@
             position: absolute;
             z-index: -1;
             .lottie_dos {
-              width: 100%;
+              width: 95%;
             }
           }
           .cont_animacion_tres {
@@ -3761,9 +3761,13 @@
             top: 0vh;
             position: absolute;
             z-index: 0;
+            .animacion_tres{
+              width: 90%;
+            }
           }
           .fondo_negro {
             top: 50vh;
+            left: 50vw;
             z-index: -4;
             position: absolute;
             width: 1px;
