--- a/style/sass.css
+++ b/style/sass.css
@@ -26,11 +26,12 @@ a {
 }
 
 body {
+  overflow-y: hidden;
   background: #ffffff;
 }
 
 body::-webkit-scrollbar {
-  position: relative;
+  position: absolute;
   width: 5px;
   background: rgba(0, 0, 0, 0.945);
 }
@@ -1041,18 +1042,24 @@ p {
   }
   .float__wapp {
     display: flex;
-    position: fixed;
-    width: 0px;
-    height: 0px;
-    top: 8vh;
-    left: 70vw;
-    z-index: 1;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
     transform: scale(1);
-    rotate: 20deg;
+    rotate: 0deg;
+  }
+  .float__wapp a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .float__wapp a .botonfloat__wapp {
-    margin-top: 23px;
-    margin-left: 23px;
+    margin-top: 0px;
+    margin-left: 0px;
     position: absolute;
     z-index: 1;
   }
@@ -3760,29 +3767,20 @@ p {
     justify-content: none;
     gap: 1em;
     flex-direction: column;
-    height: 75vh;
+    height: 80vh;
   }
-  .body__index .conten_setion_uno .titulo_setion_uno h1 {
-    margin-top: 0em;
-    color: #1d1d1d;
-    text-align: center;
+  .body__index .conten_setion_uno .titulo_setion_uno .titulo {
+    overflow: hidden;
+    color: #000000;
     font-family: MargoBeuys;
-    font-size: calc(1px + 12vw);
+    font-size: calc(1px + 15vw);
     font-style: normal;
-    font-weight: 600;
-    line-height: 110%;
+    font-weight: 400;
+    line-height: 100%;
     text-transform: uppercase;
-    text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
   }
-  .body__index .conten_setion_uno .titulo_setion_uno h1 strong {
-    color: #1d1d1d;
-    font-family: "Bodoni Moda", serif;
-    font-size: calc(1px + 12vw);
-    font-style: italic;
-    font-weight: 700;
-    line-height: 136%;
-    text-transform: uppercase;
-    text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
+  .body__index .conten_setion_uno .titulo_setion_uno .titulo p {
+    transform: translateY(130%);
   }
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores {
     width: 100%;
@@ -3812,11 +3810,13 @@ p {
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .item:nth-child(4) {
     order: 3;
   }
-  .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores img {
+  .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .item_img {
+    transform: translateY(200%);
     grid-area: 1/1/3/2;
     width: 100%;
   }
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores {
+    transform: translateY(130%);
     grid-area: 3/1/4/3;
     display: flex;
     align-items: center;
@@ -3872,6 +3872,7 @@ p {
     background: #141414;
   }
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .contador_cont {
+    transform: translateY(450%);
     justify-content: center;
     display: flex;
     align-items: center;
@@ -5217,6 +5218,9 @@ p {
     position: absolute;
     z-index: -3;
   }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_uno .svguno {
+    width: 95%;
+  }
   .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_dos {
     opacity: 0%;
     top: 25vh;
@@ -5224,7 +5228,7 @@ p {
     z-index: -1;
   }
   .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_dos .lottie_dos {
-    width: 100%;
+    width: 95%;
   }
   .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_tres {
     opacity: 0%;
@@ -5237,8 +5241,12 @@ p {
     position: absolute;
     z-index: 0;
   }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_tres .animacion_tres {
+    width: 90%;
+  }
   .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .fondo_negro {
     top: 50vh;
+    left: 50vw;
     z-index: -4;
     position: absolute;
     width: 1px;
