--- a/style/sass.css
+++ b/style/sass.css
@@ -947,59 +947,59 @@ p {
 @media (max-width: 1000px) {
   .float__wapp {
     display: flex;
-    position: fixed;
-    width: 0px;
-    height: 0px;
-    top: 5vh;
-    left: 70vw;
-    z-index: 1;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
     transform: scale(1);
-    rotate: 20deg;
+    rotate: 0deg;
+  }
+  .float__wapp a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .float__wapp a .botonfloat__wapp {
-    margin-top: 23px;
-    margin-left: 23px;
     position: absolute;
     z-index: 1;
+    border-radius: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .float__wapp a .botonfloat__wapp .rectangulo {
+    position: absolute;
+    z-index: -1;
+    top: 100%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background: #fbff00;
   }
   .float__wapp a .botonfloat__wapp:hover {
     transform: scale(1.1);
   }
-  .float__wapp a .backfloat__wapp {
+  .float__wapp a .cargando__wapp {
+    opacity: 100;
     position: absolute;
-    z-index: 0;
+    z-index: 9;
     animation-name: backfloat;
     animation-duration: 10s;
+    width: calc(1px + 16vw);
     animation-iteration-count: infinite;
     animation-timing-function: linear;
   }
-  .float__wapp_dos {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    bottom: 20px;
-    right: 110px;
-    z-index: 1;
-  }
-  .float__wapp_dos a {
-    width: 200%;
-    height: 100px;
-  }
-  .float__wapp_dos a .botonfloat__wapp {
-    margin-top: 23px;
-    margin-left: 25px;
-    position: absolute;
-    z-index: 1;
-  }
-  .float__wapp_dos a .botonfloat__wapp:hover {
-    transform: scale(1.1);
-  }
-  .float__wapp_dos a .backfloat__wapp {
+  .float__wapp a .backfloat__wapp {
+    opacity: 0;
     position: absolute;
     z-index: 0;
     animation-name: backfloat;
     animation-duration: 10s;
+    width: calc(1px + 16vw);
     animation-iteration-count: infinite;
     animation-timing-function: linear;
   }
@@ -1718,7 +1718,7 @@ p {
   }
   .float__wapp {
     display: flex;
-    position: absolute;
+    position: fixed;
     width: 50px;
     height: 50px;
     top: 50%;
@@ -2830,11 +2830,12 @@ p {
   font-weight: 400;
 }
 .body__index .grilla {
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
-  width: 88vw;
+  width: 100%;
   margin-top: 5em;
   margin-left: 5em;
   opacity: 0;
@@ -2928,7 +2929,7 @@ p {
 .body__index .cont_cinta_inicio .slider_inicio .slide-track .slide p {
   padding-top: 10px;
   padding-bottom: 10px;
-  color: #ffffff;
+  color: #0e0e0e;
   text-align: center;
   font-family: MargoBeuys;
   font-size: 95px;
