--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -237,11 +237,12 @@
   }
 
   .grilla {
+    display: none;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
-    width: 88vw;
+    width: 100%;
     margin-top: 5em;
     margin-left: 5em;
     opacity: 0;
@@ -352,7 +353,7 @@
           p {
             padding-top: 10px;
             padding-bottom: 10px;
-            color: #ffffff;
+            color: #0e0e0e;
             text-align: center;
             font-family: MargoBeuys;
             font-size: 95px;
